fix: horizontal scroll ui of call to action section

--- a/docs/output.css
+++ b/docs/output.css
@@ -1020,12 +1020,32 @@ video {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[356\.66668701171875\] {
+  width: 356.66668701171875;
+}
+
+.w-\[356\.66668701171875px\] {
+  width: 356.66668701171875px;
+}
+
+.w-\[356\.6px\] {
+  width: 356.6px;
+}
+
 .min-w-\[200px\] {
   min-width: 200px;
 }
 
 .min-w-full {
   min-width: 100%;
+}
+
+.min-w-\[240px\] {
+  min-width: 240px;
 }
 
 .max-w-\[114px\] {
@@ -3029,6 +3049,22 @@ video {
   height: 81.8px;
 }
 
+.\*\:w-\[240px\] > * {
+  width: 240px;
+}
+
+.\*\:min-w-\[240px\] > * {
+  min-width: 240px;
+}
+
+.\*\:min-w-\[220px\] > * {
+  min-width: 220px;
+}
+
+.\*\:min-w-\[20px\] > * {
+  min-width: 20px;
+}
+
 .\*\:items-center > * {
   align-items: center;
 }
@@ -3290,6 +3326,10 @@ video {
     letter-spacing: -0.04em;
   }
 
+  .\*\:tablet\:w-\[240px\] > * {
+    width: 240px;
+  }
+
   .tablet\:\*\:items-center > * {
     align-items: center;
   }
@@ -3320,6 +3360,10 @@ video {
 
   .desktop\:mt-\[139\.69px\] {
     margin-top: 139.69px;
+  }
+
+  .desktop\:grid {
+    display: grid;
   }
 
   .desktop\:hidden {
@@ -3391,12 +3435,24 @@ video {
     width: 100%;
   }
 
+  .desktop\:w-\[240px\] {
+    width: 240px;
+  }
+
   .desktop\:min-w-\[400px\] {
     min-width: 400px;
   }
 
+  .desktop\:min-w-\[240px\] {
+    min-width: 240px;
+  }
+
   .desktop\:max-w-\[1200px\] {
     max-width: 1200px;
+  }
+
+  .desktop\:max-w-\[\] {
+    max-width: ;
   }
 
   .desktop\:grid-cols-2 {
@@ -3409,6 +3465,10 @@ video {
 
   .desktop\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .desktop\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .desktop\:grid-rows-1 {
@@ -3479,5 +3539,21 @@ video {
 
   .desktop\:tracking-\[-0\.04em\] {
     letter-spacing: -0.04em;
+  }
+
+  .\*\:desktop\:w-\[386\.6px\] > * {
+    width: 386.6px;
+  }
+
+  .\*\:desktop\:w-\[\] > * {
+    width: ;
+  }
+
+  .\*\:desktop\:w-\[356\.6px\] > * {
+    width: 356.6px;
+  }
+
+  .\*\:desktop\:w-\[386\.6666564941406\] > * {
+    width: 386.6666564941406;
   }
 }
